Fix: Configure Cloud Build logging option in cloudbuild.yaml

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -81,4 +81,4 @@ substitutions:
   _YOUTUBE_API_KEY: ""
 
 options:
-  logsBucket: gs://playlisttracker-466616_cloudbuild/
+  logging: CLOUD_LOGGING_ONLY
