--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,12 +1,16 @@
 # cloudbuild.yaml
 
 steps:
-# 1. Build Backend Docker Image
+# 0. Build Backend Docker Image
 - name: 'gcr.io/cloud-builders/docker'
   args: ['build', '-t', 'gcr.io/${PROJECT_ID}/playlist-tracker-backend:latest', './backend']
   dir: '.' # Execute from the project root
 
-# 2. Deploy Backend to Cloud Run
+- name: 'gcr.io/cloud-builders/docker'
+  args: ['push', 'gcr.io/${PROJECT_ID}/playlist-tracker-backend:latest']
+  id: Push Backend Image # Give this step an ID for clarity
+
+# 1. Deploy Backend to Cloud Run (This step's index will now be 2)
 - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
   args:
   - gcloud
@@ -14,7 +18,7 @@ steps:
   - deploy
   - playlist-tracker-backend # Name of your backend Cloud Run service
   - --image=gcr.io/${PROJECT_ID}/playlist-tracker-backend:latest
-  - --region=europe-west1
+  - --region=europe-west1 # Ensure your consistent region
   - --platform=managed
   - --allow-unauthenticated
   - --port=5000
@@ -27,7 +31,7 @@ steps:
   - --project=${PROJECT_ID}
   id: Deploy Backend Service
 
-# 3. Get the URL of the deployed Backend Service
+# 2. Get the URL of the deployed Backend Service
 - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
   id: Get Backend URL
   script: |
@@ -38,12 +42,12 @@ steps:
       --project=${PROJECT_ID} > /workspace/backend_url.txt
 
 
-# 4. Build Frontend Docker Image
+# 3. Build Frontend Docker Image
 - name: 'gcr.io/cloud-builders/docker'
   args: ['build', '-t', 'gcr.io/${PROJECT_ID}/playlist-tracker-frontend:latest', './frontend']
   dir: '.'
 
-# 5. Deploy Frontend to Cloud Run
+# 4. Deploy Frontend to Cloud Run
 - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
   args:
   - gcloud
