--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -49,6 +49,10 @@ steps:
   args: ['build', '-t', 'gcr.io/${PROJECT_ID}/playlist-tracker-frontend:latest', './frontend']
   dir: '.'
 
+- name: 'gcr.io/cloud-builders/docker'
+  args: ['push', 'gcr.io/${PROJECT_ID}/playlist-tracker-frontend:latest']
+  id: Push Frontend Image
+
 # 4. Deploy Frontend to Cloud Run
 - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
   args:
