--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,5 +1,5 @@
 # Stage 1: Build the Node.js application
-FROM node:18-alpine AS builder
+FROM node:current-alpine AS builder
 
 # Set working directory inside the container
 WORKDIR /app
