--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -45,15 +45,15 @@ steps:
       --project=$PROJECT_ID > /workspace/backend_url.txt
 
 
-# 4. Build Frontend Docker Image
-- name: 'gcr.io/cloud-builders/docker'
+- name: 'gcr.io/cloud-builders/gcloud'
+  entrypoint: 'bash'
   args:
-    - 'build'
-    - '-t'
-    - 'gcr.io/${PROJECT_ID}/playlist-tracker-frontend:latest'
-    - '--build-arg'
-    - 'REACT_APP_BACKEND_URL=$(cat /workspace/backend_url.txt)'
-    - './frontend'
+    - '-c'
+    - |
+      docker build \
+        -t gcr.io/${PROJECT_ID}/playlist-tracker-frontend:latest \
+        --build-arg REACT_APP_BACKEND_URL=$(cat /workspace/backend_url.txt) \
+        ./frontend
   dir: '.'
 
 # 5. Explicitly Push Frontend Image
