--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -23,7 +23,7 @@ steps:
   - --platform=managed
   - --allow-unauthenticated
   - --port=5000
-  - --set-env-vars=DB_URI=${_DB_URI},JWT_SECRET=${_JWT_SECRET},YOUTUBE_API_KEY=${_YOUTUBE_API_KEY}
+  - --set-env-vars=MONGODB_URI=${_DB_URI},JWT_SECRET=${_JWT_SECRET},YOUTUBE_API_KEY=${_YOUTUBE_API_KEY}
   - --timeout=300
   - --cpu=1
   - --memory=512Mi
@@ -82,9 +82,9 @@ steps:
   id: Deploy Frontend Service
 
 substitutions:
-  _DB_URI: ""
-  _JWT_SECRET: ""
-  _YOUTUBE_API_KEY: ""
+  _DB_URI: "mongodb+srv://Verserain:WMkIlGNehps3HVR8@playlisttrackercluster.mgmfxzc.mongodb.net/?retryWrites=true&w=majority&appName=PlaylistTrackerCluster"
+  _JWT_SECRET: "e28ebe55a47120930a70e642fa46e1dd7f0dd0f07fb8d12ba1712c3496e8daf8"
+  _YOUTUBE_API_KEY: "AIzaSyAeKYJpY0IJBQxFfAff-b5lZzVxaZd0TwI"
 
 options:
   logging: CLOUD_LOGGING_ONLY
